macro-template/tests/ui/row_arity_mismatch.stderr
error: expected 2 replacement values, found 1
 --> tests/ui/row_arity_mismatch.rs:6:14
  |
6 |             (u8),
  |              ^^
